--- a/templates/form.html
+++ b/templates/form.html
@@ -57,8 +57,12 @@
                     <table class="table table-striped leaderboard">
                         <thead>
                             <tr>
-                                <th colspan="2">{{data['query'].capitalize()}}</th>
-                                <th>Score</th>
+                                <th colspan="3">{{data['query'].capitalize()}}</th>
+                            </tr>
+                            <tr>
+                                    <th></th>
+                                    <th colspan="" style="text-align:left;">Candidates</th>
+                                    <th>Score</th>
                             </tr>
                         </thead>
                         <tbody>
