--- a/templates/form.html
+++ b/templates/form.html
@@ -65,7 +65,7 @@
 
 
                             {% for dict_item in data['rank_list'] %}
-
+                            {% set finalRank = (dict_item['rank']*100)|int %}
                             <tr>
                                 <td>{{loop.index}}</td>
 
@@ -75,7 +75,7 @@
                                         <img class="profile_image" src="{{dict_item['image_url']}}" height="50em" width="50em" alt="TEST">{{dict_item['screen_name']}}
                                     </a>
                                 </td>
-                                <td style="text-align:center">56</td>
+                                <td style="text-align:center">{{ finalRank }}</td>
 
 
                             </tr>
