Update : remove filters from leaderboards

--- a/templates/form.html
+++ b/templates/form.html
@@ -104,7 +104,7 @@
 
 </div>
 
-<script>
+<!-- <script>
     $(function () {
         function moveItems(origin, dest) {
             $(origin).find(':selected').appendTo(dest);
@@ -143,4 +143,4 @@
         });
     });
 
-</script> {% endblock %}
+</script> {% endblock %} -->
