--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
 
 
     {% include 'includes/nav_bar.html' %}
-    <div id="first_div" class="container-fluid">
-        {% block body %}
+    <div id="first_div">
+        {% block first_div %}
         
         {% endblock %}
     </div>
