--- a/templates/home.html
+++ b/templates/home.html
@@ -1,78 +1,82 @@
-{% extends 'index.html' %}
+{% extends 'index.html' %} {% block head %}
+<!-- Custom fonts for this template -->
+<link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
-{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/hero.css') }}"> {% endblock %} {% block content %}
+<header class="masthead text-center text-white">
+  <div class="background-image"></div>
+  <div class="masthead-content">
+    <div class="container">
+      <h3 class="masthead-subheading mb-0">Social Champion Identification made easy</h3>
+      <a href="/addtopics" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+    </div>
+  </div>
+</header>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/hero.css') }}">
 
-{% endblock %}
-{% block first_div %}
-    <header class="masthead text-center text-white">
-        <div class="background-image"></div>
-        <div class="masthead-content">
-          <div class="container">
-              <h3 class="masthead-subheading mb-0">Social Champion Identification made easy</h3>
-              <a href="/addtopics" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+
+<section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <img class="img-fluid" src="/static/images/blue-people.jpg" alt="ego network">
           </div>
         </div>
-    </header>
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <h2 class="display-4">TwitterRank</h2>
+            <p>We leverage the concept of homophily in social networks to estimate how connected every follower is to the candidate.
+              The consolidated influence of every follower is determined by the volume tweets of the other friends of the follower
+              as well as the similarity of the candidate and follower's tweets</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-   
-    <section>
+
+
+<section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div class="p-5">
+            <div class="flexbox">
+                <img class="img-fluid" src="/static/images/fav.svg" alt="">
+                <img class="img-fluid" src="/static/images/retweet.svg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="p-5">
+            <h2 class="display-4">Magnitude of Influence</h2>
+            <p>Measures the engagement of every follower with the candidate through the likes and retweets of every tweet. This
+              metric serves as a proxy check on the apparent follower-based influence. Likes measure user affinity with the
+              tweet as well as the twitterer. Retweets measure the content value of the tweet and indicates its diffusion through
+              the network.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/01.jpg" alt="">
+              <img class="img-fluid" src="/static/images/topic.png" alt="">
             </div>
           </div>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
-              <h2 class="display-4">For those about to rock...</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-6">
-            <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/02.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="p-5">
-              <h2 class="display-4">We salute you!</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-6 order-lg-2">
-            <div class="p-5">
-              <img class="img-fluid rounded-circle" src="img/03.jpg" alt="">
-            </div>
-          </div>
-          <div class="col-lg-6 order-lg-1">
-            <div class="p-5">
-              <h2 class="display-4">Let there be rock!</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+              <h2 class="display-4">Topic Relevance</h2>
+              <p>We measure the relevance of the candidate's tweets to the areas of interest of the NGO. </p>
             </div>
           </div>
         </div>
@@ -80,4 +84,3 @@
     </section>
 
 {% endblock %}
-
