Update : graph properties

--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -18,6 +18,7 @@
     <div class="graphs">
         <h2>Likes over time:</h2>
         <canvas id="SeriesTweet" width="400"></canvas>
+        <h2>Retweets over time:</h2>
         <canvas id="SeriesFav" width="400"></canvas>
     </div>
 
@@ -64,6 +65,8 @@
         scales: {
             xAxes: [{
                 ticks: {
+                    min: 0,
+                    max: 100,
                     beginAtZero: true
                 }
             }],
