--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -7,7 +7,7 @@
         <div class="col-sm-4">
             <div class="container userBox">
                 <img class="profile_image_graph"  src="{{image_url}}" height="200em" width="200em" alt="TEST">
-                <p  style="font-size:2em">{{screen_name}}</p>
+                <p  style="font-size:2em">{{name}}</p>
             </div>
         </div>
         <div class="col-sm-8">
