Add: New candidates and fix scaler

--- a/templates/form.html
+++ b/templates/form.html
@@ -21,7 +21,8 @@
 
     <img src="http://www.madelinejaeger.com/wp-content/uploads/2016/05/leaderboard_screenshot_2.jpg" alt="leaderboards" height="300px"
         width="300px">
-
+    <hr>
+    <h2>Influence based leaderboard</h2>
     <div class="row">
         <div class="col-sm-6 influence">
                 <table class="table table-striped leaderboard">
@@ -59,6 +60,7 @@
         </div>
     </div>
     <hr>
+    <h2>Topic Based Leaderboards</h2>
     <div class="row">
         <div class="col-sm-12">
             <div class="flex-container">
