--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -16,9 +16,9 @@
         </div>
     </div>
     <div class="graphs">
-        <h2>Likes over time:</h2>
+        <h2>Likes over time</h2>
         <canvas id="SeriesTweet" width="400"></canvas>
-        <h2>Retweets over time:</h2>
+        <h2>Retweets over time</h2>
         <canvas id="SeriesFav" width="400"></canvas>
     </div>
 
