--- a/static/css/form.css
+++ b/static/css/form.css
@@ -17,6 +17,15 @@
     border: 2px solid red; 
 }
 
+
+.graphs-parent {
+    display: flex;
+    justify-content: center;
+}
+.graphs {
+    width: 60vw;
+}
+
 .profile_image {
     margin-right: 1em;
 }
