Add: Follower count to graph and update colors

--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -8,6 +8,7 @@
             <div class="container userBox">
                 <img class="profile_image_graph"  src="{{image_url}}" height="200em" width="200em" alt="TEST">
                 <p  style="font-size:2em">{{name}}</p>
+                <p  style="font-size:1.5em">Followers: {{followers}}</p>
             </div>
         </div>
         <div class="col-sm-8">
@@ -51,12 +52,12 @@
     backgroundColor: [
         'rgba(255, 99, 132, 0.2)',
         'rgba(54, 162, 235, 0.2)',
-        'rgba(255, 206, 86, 0.2)'
+        'rgba(30, 110, 0, 0.2)'
     ],
         borderColor: [
             'rgba(255,99,132,1)',
             'rgba(54, 162, 235, 1)',
-            'rgba(255, 206, 86, 1)'
+            'rgba(30, 110, 0, 1)'
         ],
             borderWidth: 1
                 }]
