--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">TwitterRank</h2>
+            <h2 class="display-4">Topic Sensitive Influence</h2>
             <p>We leverage the concept of homophily in social networks to estimate how connected every follower is to the candidate.
               The consolidated influence of every follower is determined by the volume tweets of the other friends of the follower
               as well as the similarity of the candidate and follower's tweets</p>
@@ -54,7 +54,7 @@
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2 class="display-4">Magnitude of Influence</h2>
+            <h2 class="display-4">Magnitude of Engagement</h2>
             <p>Measures the engagement of every follower with the candidate through the likes and retweets of every tweet. This
               metric serves as a proxy check on the apparent follower-based influence. Likes measure user affinity with the
               tweet as well as the twitterer. Retweets measure the content value of the tweet and indicates its diffusion through
